<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="service_question">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="amazing_15">Amazing (15%)</string>
    <string name="amazing_18">Amazing (18%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>